# silverscript

./: .gitignore  .rustfmt.toml  CREDITS.md  Cargo.toml  DECL.md  LICENSE  PLAN.md  README.md  TUTORIAL.md
.github/workflows/: ci.yaml  dog20-book-pages.yaml  kcc20-book-pages.yaml
covenants/sdk/: Cargo.toml
covenants/sdk/examples/: silverscript_state_split.rs
covenants/sdk/src/: builder.rs  lib.rs
debugger/cli/: Cargo.toml  README.md
debugger/cli/src/: main.rs
debugger/cli/tests/: auto_sign.rs  cli_tests.rs
debugger/dap/: Cargo.toml
debugger/dap/src/: adapter.rs  launch_config.rs  main.rs  refs.rs  runtime_builder.rs
debugger/dap/tests/: harness.rs  test_launch.rs
debugger/fixtures/kcc20-flow/: 01-init-kcc20-minter-branch.json  02-create-tokens-from-minter.json  03-burn-tokens-from-minter.json  04-transfer-created-tokens.json  README.md
debugger/session/src/: args.rs  covenant.rs  lib.rs  presentation.rs  session.rs  test_runner.rs  util.rs
debugger/session/tests/: debug_session_tests.rs
docs/: DEBUGGER_STRUCT_STATE_OVERVIEW.md  DEBUGGER_STRUCT_STATE_QUICK_FLOW.md  DECL.md  TUTORIAL.md  dap-layer-migration-plan.md  vscode-debugger-extension-redesign-plan.md
docs/dog20-book/: README.md  book.toml
docs/dog20-book/src/: SUMMARY.md  dog20-contract.md  dog20-minter-contract.md  dog20-overview.md  introduction.md  scenarios.md  what-the-tests-demonstrate.md
docs/kcc20-book/: README.md  book.toml
docs/kcc20-book/src/: introduction.md  kcc20-contract.md  kcc20-minter-contract.md  kcc20-overview.md  scenarios.md  what-the-tests-demonstrate.md
examples/: debug_small_inline.sil  debug_state.sil  debug_struct_state_matrix.ctor.json  debug_struct_state_matrix.sil
extensions/silverscript.nvim/: README.md
extensions/silverscript.nvim/lua/: silverscript.lua
extensions/vscode/: .gitignore  .vscodeignore  CHANGELOG.md  README.md  package-lock.json  package.json
extensions/vscode/assets/: tree-sitter-silverscript.wasm
extensions/zed/: README.md  extension.toml
silverscript-lang/: Cargo.toml
silverscript-lang/src/: ast.rs  compiler.rs  debug.rs  debug_info.rs  errors.rs  lib.rs  parser.rs  silverscript.pest  span.rs
silverscript-lang/src/ast/: mod.rs  visit.rs
silverscript-lang/src/compiler/: array_push.rs  compile.rs  covenant_declarations.rs  debug_recording.rs  debug_value_types.rs  for.rs  infer_array.rs  inline_functions.rs  locals.rs  mod.rs  stack_bindings.rs  static_check.rs  structs.rs  type_check.rs
silverscript-lang/src/debug/: presentation.rs  session.rs
silverscript-lang/src/diagnostic/: parse.rs  parse_diagnostics.rs
silverscript-lang/std/: builtins.sil
silverscript-lang/tests/: ast_format_tests.rs  ast_json_tests.rs  ast_spans_tests.rs  cashc_valid_examples_tests.rs  chess_apps_tests.rs  common.rs  compiler_tests.rs  covenant_compiler_tests.rs  covenant_declaration_ast_tests.rs  covenant_declaration_security_tests.rs  date_literal_tests.rs  debug_session_tests.rs  debugger_cli_tests.rs  dog20_tests.rs  examples_tests.rs  kcc20_tests.rs  parse_diagnostics_tests.rs  parser_tests.rs  silverc_tests.rs  tutorial_examples_tests.rs  tutorial_rust_examples_tests.rs
silverscript-lang/tests/apps/chess/: chess_castle.sil  chess_castle_challenge.sil  chess_diag.sil  chess_horiz.sil  chess_king.sil  chess_knight.sil  chess_mux.sil  chess_pawn.sil  chess_settle.sil  chess_vert.sil  constants.sil  player.sil
silverscript-lang/tests/ast_json/: require_test.ast.json  yield_test.ast.json
silverscript-lang/tests/covenant_declaration_ast_fixtures/: lowers_auth_groups_single.sil  lowers_auth_transition_two_field_state.sil  lowers_auth_verification_groups_multiple_two_field_state.sil  lowers_auth_verification_groups_single_two_field_state.sil  lowers_cov_to_leader_and_delegate_expected_wrapper_ast.sil  lowers_cov_transition_single_field_state.sil  lowers_cov_transition_two_field_state.sil  lowers_cov_verification_two_field_state.sil  lowers_fanout_sugar_verification_two_field_state.sil  lowers_inferred_auth_verification_two_field_state.sil  lowers_inferred_cov_verification_two_field_state.sil  lowers_inferred_singleton_transition_two_field_state.sil  lowers_many_covenant_declarations_in_one_contract.sil  lowers_singleton_sugar_transition_termination_allowed_two_field_state.sil  lowers_singleton_sugar_transition_two_field_state.sil  lowers_singleton_sugar_verification_termination_allowed_to_state_array_validation.sil  lowers_singleton_sugar_verification_to_single_state_validation.sil  lowers_singleton_transition_uses_returned_state_in_validation.sil  lowers_singleton_transition_with_termination_allowed_to_array_cardinality_checks.sil  lowers_termination_allowed_in_transition_non_singleton_mode.sil  lowers_termination_allowed_in_verification_non_singleton_mode.sil  lowers_transition_array_return_to_exact_output_count_match.sil
silverscript-lang/tests/examples/: 2_of_3_multisig.sil  announcement.sil  bar.sil  bitwise.sil  bounded_bytes.sil  bytes1_equals_byte.sil  cast_hash_checksig.sil  comments.sil  complex_assignments.sil  constant_budget.sil  covenant.sil  covenant_all_fields.sil  covenant_escrow.sil  covenant_id.sil  covenant_last_will.sil  covenant_mecenas.sil  date_literal.sil  debug_messages.sil  deep_replace.sil  deeply_nested-logs.sil  deeply_nested.sil  dog20-minter.sil  dog20.sil  double_split.sil  everything.sil  foo.sil  for_loop.sil  for_loop_ctor.sil  force_cast_smaller_bytes.sil  hodl_vault.sil  if_statement.sil  if_statement_number_units-logs.sil  if_statement_number_units.sil  int_to_byte.sil  integer_formatting.sil  kcc20-minter.sil  log_intermediate_results.sil  mecenas.sil  mecenas_locktime.sil  multifunction.sil  (+40 more)
tree-sitter/: Cargo.toml  README.md  grammar.js  package-lock.json  package.json  setup.py
tree-sitter/queries/: highlights.scm
tree-sitter/src/: grammar.json  node-types.json  parser.c
vscode-silverscript/: CHANGELOG.md  README.md  language-configuration.json  package.json
vscode-silverscript/snippets/: silverscript.json
vscode-silverscript/syntaxes/: silverscript.tmLanguage.json
(+21 files in other folders)
