[package]
name = "silverscript-lang"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "silverscript_lang"
path = "src/lib.rs"

[dependencies]
kaspa-consensus-core.workspace = true
kaspa-txscript.workspace = true
kaspa-txscript-errors.workspace = true
blake2b_simd.workspace = true
chrono = "0.4"
pest = "2.7"
pest_derive = "2.7"
rand.workspace = true
secp256k1.workspace = true
thiserror.workspace = true
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0"
kaspa-addresses.workspace = true

