[package]
name = "silverscript-lang"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "silverscript_lang"
path = "src/lib.rs"

[dependencies]
kaspa-consensus-core.workspace = true
kaspa-txscript.workspace = true
kaspa-txscript-errors.workspace = true
blake2b_simd.workspace = true
chrono = "0.4"
pest = "2.7"
pest_derive = "2.7"
rand.workspace = true
secp256k1.workspace = true
thiserror.workspace = true
serde = { version = "1.0", features = ["derive"] }
faster-hex = "0.9"
serde_json = "1.0"

# Native-only dependencies (not compiled for wasm32)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
crossterm = "0.28"
clap = { version = "4.5", features = ["derive"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"

[dev-dependencies]
kaspa-addresses.workspace = true
