[package]
name = "kaspa-covenant-sdk"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
kaspa-txscript.workspace = true
kaspa-txscript-errors.workspace = true
kaspa-consensus-core.workspace = true
kaspa-hashes.workspace = true
thiserror.workspace = true

[dev-dependencies]
silverscript-lang = { path = "../../silverscript-lang" }

[lib]
name = "kaspa_covenant_sdk"
path = "src/lib.rs"
